@@ -517,6 +517,10 @@ changes, or look through the Subversion logs for all the details.
   If False ``main`` doesn't call :func:`sys.exit` allowing it to
   be used from the interactive interpreter. :issue:`3379`.
 
+  :class:`TestResult` has new :meth:`startTestRun` and
+  :meth:`stopTestRun` methods; called immediately before
+  and after a test run. :issue:`5728` by Robert Collins.
+
 * The :func:`is_zipfile` function in the :mod:`zipfile` module will now
   accept a file object, in addition to the path names accepted in earlier
   versions.  (Contributed by Gabriel Genellina; :issue:`4756`.)
